--- a/view/index.html
+++ b/view/index.html
@@ -4,10 +4,10 @@
     </head>
 
     <body>
+        <button onclick="myFunction()">Commencer simulation</button>
         <script>
             document.body.style.background = 'white';
             document.write("Salut mon enfant");
-
         </script>
     </body>
 </html>
