Ajout page de lancement

--- a/view/index.html
+++ b/view/index.html
@@ -1,13 +1,16 @@
+<!DOCTYPE html>
+<html lang="fr">
 <html>
-    <head>
-        <title></title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/index.css"/>
+    <title>Lancer Simulation</title>
+</head>
 
-    <body>
-        <button onclick="myFunction()">Commencer simulation</button>
-        <script>
-            document.body.style.background = 'white';
-            document.write("Salut mon enfant");
-        </script>
-    </body>
+<body>
+<div id="centralDiv">
+    <button onclick="myFunction()">Commencer simulation</button>
+</div>
+
+</body>
 </html>
