Essaye toujours la meme chose pas avancé

--- a/View/index.html
+++ b/View/index.html
@@ -8,8 +8,13 @@
 
     <body>
         <div id="centralDiv">
-            <button onclick="SayHello()">Lancer Simulation</button>
-            <script src="./lancerSimulation.js"></script>
+            <button onclick="lancerSimulation()">Lancer Simulation</button>
+            <script>
+                
+                function lancerSimulation(){
+                    
+                }
+            </script>
         </div>
     </body>
 </html>
