refactoring, new gruntfile, updates

--- a/View/index.html
+++ b/View/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/index.css"/>
-        <title>Lancer Simulation</title>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/index.css"/>
+  <title>Lancer Simulation</title>
+</head>
 
-    <body>
-        <div id="centralDiv">
-            <button onclick="lancerSimulation()">Lancer Simulation</button>
-            <script>
-                
-                function lancerSimulation(){
-                    
-                }
-            </script>
-        </div>
-    </body>
+<body>
+<div id="centralDiv">
+  <button onclick="lancerSimulation()">Lancer Simulation</button>
+  <script src="scripts/main.js"></script>
+  <script src="http://localhost:35729/livereload.js"></script>
+</div>
+</body>
 </html>
