--- a/View/index.html
+++ b/View/index.html
@@ -8,8 +8,8 @@
 
 <body>
 <div id="centralDiv">
-  <button onclick="lancerSimulation()">Lancer Simulation</button>
-  <script src="scripts/main.js"></script>
+  <button onclick="simulation()">Lancer Simulation</button>
+  <script src="scripts/main.js">require('./scripts/main.js');</script>
 </div>
 </body>
 </html>
