--- a/View/index.html
+++ b/View/index.html
@@ -6,7 +6,7 @@
   <title>Lancer Simulation</title>
 </head>
 
-<body>
+<body id="parquet">
 <div id="centralDiv">
   <button onclick="simulation()">Lancer Simulation</button>
   <script src="scripts/main.js">require('./scripts/main.js');</script>
