--- a/View/index.html
+++ b/View/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/index.css"/>
   <title>Lancer Simulation</title>
+  <script src="scripts/main.js">require('./scripts/main.js');</script>
 </head>
 
 <body id="parquet">
 <div id="centralDiv">
-  <button onclick="simulation()">Lancer Simulation</button>
-  <script src="scripts/main.js">require('./scripts/main.js');</script>
+  <button id="boutonDemarrage"onclick="simulation()">Lancer Simulation</button>
 </div>
 </body>
 </html>
